--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 logging.level.org.springframework.web=DEBUG
 logging.level.root=info
 logging.level.com.educatejava=DEBUG
-logging.path=logs
-logging.file.name=${logging.path}/log.log
+logging.file.path=logs
+logging.file.name=${logging.file.path}/log.log
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 spring.thymeleaf.cache=false
+server.error.whitelabel.enabled=false
